# ircast

./: .gitignore  ircast.cabal  lighttpd.conf
lib/Network/IRC/: Pipes.hs
lib/Network/IRC/Cast/: Main.hs
src/: Main.hs
test/: test.hs
