name:                ircast
version:             0.1.0.0
synopsis:            A layer between IRC and other clients
-- description:         
homepage:            http://github.com/mbrock/ircast
license:             AGPL-3
license-file:        LICENSE
author:              Mikael Brockman
maintainer:          mikael.brockman@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:       base ==4.5.*, text ==0.11.*, 
                       pipes-attoparsec ==0.3.*,
                       pipes-network ==0.6.*,
                       pipes ==4.0.*,
                       irc-bytestring ==0.1.*,
                       bytestring ==0.9.*,
                       attoparsec ==0.10.*,
                       network-simple ==0.3.*,
                       mtl ==2.1.*
  exposed-modules:     Network.IRC.Pipes,
                       Network.IRC.Cast.Main
  hs-source-dirs:      lib
  ghc-options:         -Wall

executable ircast
  main-is:             Main.hs
  build-depends:       base ==4.5.*, ircast
  hs-source-dirs:      src
  ghc-options:         -Wall

test-suite ircast-test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends: base, ircast,
                 mtl ==2.1.*,
                 text ==0.11.*,
                 bytestring ==0.9.*,
                 tasty-hunit ==0.2.*,
                 tasty-smallcheck ==0.2.*,
                 tasty ==0.3.*,
                 pipes ==4.0.*
